refactor, cleanup, and update docs
