# docs/swagger.json
@@ -342,38 +342,6 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "description": "soft delete reward data by id.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Reward"
-                ],
-                "summary": "soft delete reward data",
-                "parameters": [
-                    {
-                        "description": "body request",
-                        "name": "deleteReward",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.DeleteReward"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.RowsAffected"
-                        }
-                    }
-                }
             }
         },
         "/reward/:id/:rewardId": {
@@ -408,6 +376,27 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "soft delete reward data by id.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reward"
+                ],
+                "summary": "soft delete reward data",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.RowsAffected"
+                        }
+                    }
+                }
             }
         }
     },
@@ -420,17 +409,6 @@
                 },
                 "refresh_token": {
                     "type": "string"
-                }
-            }
-        },
-        "dto.DeleteReward": {
-            "type": "object",
-            "required": [
-                "id"
-            ],
-            "properties": {
-                "id": {
-                    "type": "integer"
                 }
             }
         },
@@ -463,10 +441,14 @@
         "dto.Profile": {
             "type": "object",
             "properties": {
+                "active": {
+                    "type": "boolean"
+                },
                 "admin_id": {
                     "type": "string"
                 },
                 "created_at": {
+                    "description": "Transactions []_transaction.Domain `json:\"transactions\"`",
                     "type": "string"
                 },
                 "email": {
@@ -483,9 +465,6 @@
                 },
                 "points": {
                     "type": "integer"
-                },
-                "status": {
-                    "type": "boolean"
                 },
                 "updated_at": {
                     "type": "string"
@@ -644,6 +623,9 @@
                 "password"
             ],
             "properties": {
+                "active": {
+                    "type": "boolean"
+                },
                 "admin_id": {
                     "type": "string"
                 },
@@ -658,9 +640,6 @@
                 },
                 "password": {
                     "type": "string"
-                },
-                "status": {
-                    "type": "boolean"
                 }
             }
         },
